updated data file

--- a/Crime.ipynb
+++ b/Crime.ipynb
@@ -1858,21 +1858,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "apply_filter() missing 2 required positional arguments: 'y' and 'H'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-87-2277132933c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mpatched\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mFILTER_SIZE\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mFILTER_SIZE\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msumPool\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mxr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpatched\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mR1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapply_filter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0mR2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapply_filter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mR1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mR3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapply_filter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mR2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: apply_filter() missing 2 required positional arguments: 'y' and 'H'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Process Entries using a filter \n",
     "#we'll take a square of 11x11, and use a normalized sum pool\n",
@@ -1887,10 +1875,34 @@
     "        for j in range(FILTER_SIZE//2, H.shape[1] - (FILTER_SIZE//2 + 1)): \n",
     "            sumPool = H[i-FILTER_SIZE//2:i+FILTER_SIZE//2 + 1,j-FILTER_SIZE:j+FILTER_SIZE//2 + 1].sum() \n",
     "            patched[i - FILTER_SIZE//2, j - FILTER_SIZE//2] = sumPool\n",
-    "    return (xr, yr, patched )\n",
-    "R1 = apply_filter(H)\n",
+    "    return (xr, yr, patched)\n",
+    "R1 = apply_filter(xc, yc, H)\n",
     "R2 = apply_filter(*R1) \n",
     "R3 = apply_filter(*R2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dumpToJSONDataFile(x, y, H): \n",
+    "    import json\n",
+    "    jsonDict = {\"x\": x.tolist(), \"y\": y.tolist(), \"z\": H.tolist()}; \n",
+    "    with open(\"data.json\", 'w') as f: \n",
+    "        json.dump(jsonDict, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dumpToJSONDataFile(*R2)"
    ]
   },
   {
@@ -1988,12 +2000,7 @@
    "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import json\n",
-    "jsonDict = {\"x\": xc.tolist(), \"y\": yc.tolist(), \"z\": H.tolist()}; \n",
-    "with open(\"data.json\", 'w') as f: \n",
-    "    json.dump(jsonDict, f)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
