--- a/Crime.ipynb
+++ b/Crime.ipynb
@@ -1858,13 +1858,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Process Entries using a filter \n",
     "#we'll take a square of 11x11, and use a normalized sum pool\n",
-    "def apply_filter(x, y, H, FILTER_SIZE = 15): \n",
+    "def apply_sum_filter(x, y, H, FILTER_SIZE = 15): \n",
     "    total = H.sum() \n",
     "\n",
     "    patched = np.zeros((H.shape[0] - FILTER_SIZE, H.shape[1] - FILTER_SIZE)) \n",
@@ -1876,27 +1876,27 @@
     "            sumPool = H[i-FILTER_SIZE//2:i+FILTER_SIZE//2 + 1,j-FILTER_SIZE:j+FILTER_SIZE//2 + 1].sum() \n",
     "            patched[i - FILTER_SIZE//2, j - FILTER_SIZE//2] = sumPool\n",
     "    return (xr, yr, patched)\n",
-    "R1 = apply_filter(xc, yc, H)\n",
-    "R2 = apply_filter(*R1) \n",
+    "R1 = apply_filter(xc, yc, H, FILTER_SIZE=H.shape[0]//2)\n",
+    "R2 = apply_filter(*R1, FILTER_SIZE=R1[2].shape[0]//2) \n",
     "R3 = apply_filter(*R2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dumpToJSONDataFile(x, y, H): \n",
     "    import json\n",
-    "    jsonDict = {\"x\": x.tolist(), \"y\": y.tolist(), \"z\": H.tolist()}; \n",
+    "    jsonDict = {\"x\": x.tolist(), \"y\": y.tolist(), \"z\": H.tolist(), \"xbound\": [x.min(), x.max()], \"ybound\": [y.min(), y.max()]}; \n",
     "    with open(\"data.json\", 'w') as f: \n",
     "        json.dump(jsonDict, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -2051,6 +2051,26 @@
    ],
    "source": [
     "y.mean(), x.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-84.549450355000005, 33.623499664999997, -84.290419645, 33.882570334999997)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(xc.min(), yc.min(), xc.max(), yc.max())"
    ]
   },
   {
