--- a/Crime.ipynb
+++ b/Crime.ipynb
@@ -1976,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1991,12 +1991,13 @@
       "313.0\n",
       "360.0\n",
       "495.0\n",
+      "588.0\n",
       "1358.0\n"
      ]
     }
    ],
    "source": [
-    "for k in [40, 50, 60, 70, 80, 90, 92, 95, 100]: \n",
+    "for k in [40, 50, 60, 70, 80, 90, 92, 95, 97, 100]: \n",
     "    print(np.percentile(R1[2], k))"
    ]
   },
